ontol/ontol-compiler/test-cases/error/rel/invalid_relation.on
def foo ()
def bar ()
rel foo
    uuid: // ERROR invalid relation type
    bar
